<resources>
    <string name="app_name">Chamberly</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Choose a Display Name!</string>
    <string name="display_name">Display Name...</string>
    <string name="continue_button">Continue</string>
    <string name="register">Register</string>
    <string name="follow_us_on_social_media"> Follow us on social media :)</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="swipe_right_to_start_chatting">Swipe right to start chatting</string>
    <string name="message">Message</string>
    <string name="john_grady_cole">John Grady Cole</string>
    <string name="user_icon">User Icon</string>
    <string name="chamberly">CHAMBERLY</string>
    <string name="search">Search</string>
    <string name="create_a_chamber">Create a Chamber</string>
    <string name="todo">TODO</string>
    <string name="grouptitle">groupTitle</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="start_a_chat">Start a Chat</string>
    <string name="create_chamber">Create Chamber</string>
    <string name="enter_chamber_title">Enter Chamber Title...</string>
    <string name="dislike">disliked</string>
    <string name="this_is_a_message">This is a Message</string>
    <string name="chat_icon">Chat Icon</string>
    <string name="title">Title</string>
    <string name="_1_2">1/2</string>

    <string name="preference_file_key">com.company.chamberly_preferences</string>
    <string name="notif_permission_requested_key">notification_permission_requested</string>
    <string name="info" />
    <string name="follow_us_on_instagram">Follow us on Instagram!</string>
    <string name="_125">125</string>
    <string name="find_a_chamber">Find a Chamber</string>
    <string name="create_a_display_name">Create a Display Name</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="feel_free_we_do_not_ask_your_real_name_but_it_must_comply_with_the_terms_conditions"><![CDATA[Feel free, we do not ask your real name, but it must comply with the Terms & Conditions]]></string>
    <string name="swipe_right_to_start_chatting1">Swipe right to start chatting!</string>
    <string name="my_chambers">My Chambers</string>
    <string name="skip_the_chamber">Skip the Chamber</string>
    <string name="join_the_chamber">Join the Chamber  </string>
    <string name="joinchamber"><![CDATA[Join the Chamber   ]]></string>
    <string name="you_do_not_have_any_chambers_yet">You do not have any Chambers yet</string>
</resources>