<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Information bar -->
    <LinearLayout
        android:id="@+id/infoBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:id="@+id/groupTitle"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/grouptitle"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:src="@drawable/display_name_icon"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <!-- messages list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- input and send button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_a_message"
            android:minHeight="48dp"
            android:inputType=""
            android:autofillHints="" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/send"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>
